--- a/client/webUI/src/app/pages/admin/add-event/add-event.component.html
+++ b/client/webUI/src/app/pages/admin/add-event/add-event.component.html
@@ -122,17 +122,12 @@
                   appearance="outline"
                   class="d-block input-lg input"
                 >
-                  <input matInput formControlName="title" />
+                  <input matInput formControlName="city" />
                   <mat-icon matSuffix>person</mat-icon>
                   <mat-error
-                    *ngIf="addEventForm.get('title')?.hasError('required')"
+                    *ngIf="addEventForm.get('city')?.hasError('required')"
                     >This is Required</mat-error
-                  >
-                  <mat-error
-                    *ngIf="addEventForm.get('title')?.hasError('minlength')"
-                  >
-                    Name must be at least 3 characters long</mat-error
-                  >
+                  >                  
                 </mat-form-field>
               </div>              
             </div>
