--- a/client/webUI/src/app/pages/admin/edit-event/edit-event.component.html
+++ b/client/webUI/src/app/pages/admin/edit-event/edit-event.component.html
@@ -33,15 +33,15 @@
       <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
         <mat-card-content>
           <!-- form -->
-          <form [formGroup]="addEventForm">
+          <form [formGroup]="editEventForm">
             <div class="row">
               <div class="col-6">
                 <h4 class="fw-bold mb-1">Name</h4>
                 <mat-form-field appearance="outline" class="d-block input-lg input">
                   <input matInput formControlName="title" />
                   <mat-icon matSuffix>person</mat-icon>
-                  <mat-error *ngIf="addEventForm.get('title')?.hasError('required')">This is Required</mat-error>
-                  <mat-error *ngIf="addEventForm.get('title')?.hasError('minlength')">
+                  <mat-error *ngIf="editEventForm.get('title')?.hasError('required')">This is Required</mat-error>
+                  <mat-error *ngIf="editEventForm.get('title')?.hasError('minlength')">
                     Name must be at least 3 characters long</mat-error>
                 </mat-form-field>
               </div>
@@ -80,7 +80,7 @@
                 <mat-form-field appearance="outline" class="d-block input-lg input">
                   <input matInput formControlName="city" />
                   <mat-icon matSuffix>person</mat-icon>
-                  <mat-error *ngIf="addEventForm.get('city')?.hasError('required')">This is Required</mat-error>
+                  <mat-error *ngIf="editEventForm.get('city')?.hasError('required')">This is Required</mat-error>
                 </mat-form-field>
               </div>
             </div>
@@ -107,8 +107,8 @@
                 <h4 class="fw-bold mb-1">Address</h4>
                 <mat-form-field appearance="outline" class="d-block input-lg input">
                   <textarea matInput formControlName="address" rows="5"></textarea>
-                  <mat-error *ngIf="addEventForm.get('address')?.hasError('required')">This is Required</mat-error>
-                  <mat-error *ngIf="addEventForm.get('address')?.hasError('minlength')">
+                  <mat-error *ngIf="editEventForm.get('address')?.hasError('required')">This is Required</mat-error>
+                  <mat-error *ngIf="editEventForm.get('address')?.hasError('minlength')">
                     Name must be at least 3 characters long</mat-error>
                 </mat-form-field>
               </div>
