update soe UI text and enhancements

--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -49,6 +49,7 @@
     </div>
   </section>
   <!-- /gift-image-section -->
+
   <!-- how it works section -->
   <section class="container py-5">
     <div class="row justify-content-center text-center">
@@ -72,7 +73,7 @@
           <mat-card-content>
             <div>
               <img src="assets/images/login-image.jpg" alt="">
-            </div>            
+            </div>
           </mat-card-content>
           <mat-card-footer>
             <div>
@@ -97,14 +98,14 @@
           <mat-card-content>
             <div>
               <img src="assets/images/gift-selection.png" width="256" height="256" alt="">
-            </div>            
+            </div>
           </mat-card-content>
           <mat-card-footer>
             <div>
               Browse through a curated selection of gifts and pick the one that suits you best. Your perfect gift is
               just
               a
-              click away—make your choice today..
+              click away..
             </div>
           </mat-card-footer>
         </mat-card>
@@ -124,14 +125,14 @@
           <mat-card-content>
             <div>
               <img src="assets/images/gift-announcement.png" width="256" height="256" alt="">
-            </div>            
-          </mat-card-content> 
+            </div>
+          </mat-card-content>
           <mat-card-footer>
             <div>
               A gift to cherish! Celebrate the joy and excitement that comes with your special gift. It’s your moment to
               enjoy something meaningful...
             </div>
-          </mat-card-footer>         
+          </mat-card-footer>
         </mat-card>
       </div>
       <!-- /celebrate your gift -->
@@ -143,12 +144,12 @@
       </div>
     </div>
   </section>
-  <section>    
-  </section>
   <!-- /how it works section -->
+
   <!-- footer section -->
   <app-employee-footer></app-employee-footer>
   <!-- /footer section -->
+   
   <!-- /container section -->
 </section>
 <!--/landing page -->
