--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -12,8 +12,9 @@
       <div class="header-links d-flex align-items-center">
         <div class="d-flex align-items-center">
           <a mat-flat-button class="bg-dark py-3 shadow-sm button-mh-45 me-2" [routerLink]="['/upcoming-events']">
-            <mat-icon>campaign</mat-icon>Events</a>
-          <div [matMenuTriggerFor]="notificationsMenu" class="mx-3 notification d-flex position-relative">
+            <mat-icon>campaign</mat-icon>Upcoming Events</a>
+          <div [matMenuTriggerFor]="notificationsMenu"
+            class="mx-2 notification d-flex position-relative notification-outline">
             <mat-icon>notifications</mat-icon>
             <span *ngIf="unreadCount > 0" class="notification-badge position-absolute"></span>
           </div>
@@ -24,7 +25,7 @@
                 (click)="updateNotifications(notification._id)"
                 [ngClass]="{ 'unread-notification': !notification.isSeen }">
                 <mat-icon class="me-2">notifications</mat-icon>
-                <span>{{ notification.message }}</span>
+                <span class="fw-bold">{{ notification.message }}</span>
                 <div>{{ notification.createdAt}}</div>
               </button>
             </ng-container>
@@ -38,7 +39,7 @@
         </div>
         <div class="d-flex align-items-baseline">
           <!-- admin name -->
-          <div [matMenuTriggerFor]="menu" class="mx-3 employee d-flex">
+          <div [matMenuTriggerFor]="menu" class="mx-2 employee d-flex text-capitalize">
             <mat-icon>person</mat-icon>{{ loggedUser.name }}
           </div>
           <!-- mat menu -->
@@ -60,8 +61,8 @@
       <div class="header-links d-flex align-items-center">
         <div class="d-flex align-items-center">
           <a mat-flat-button class="bg-dark py-3 shadow-sm button-mh-45 me-2" [routerLink]="['/upcoming-events']">
-            <mat-icon>campaign</mat-icon>Events</a>
-          <div [matMenuTriggerFor]="notificationsMenu" class="mx-3 notification d-flex position-relative">
+            <mat-icon>campaign</mat-icon> Upcoming Events</a>
+          <div [matMenuTriggerFor]="notificationsMenu" class="2 notification d-flex position-relative">
             <mat-icon>notifications</mat-icon>
             <span *ngIf="unreadCount > 0" class="notification-badge position-absolute"></span>
           </div>
@@ -86,7 +87,7 @@
         </div>
         <div class="d-flex align-items-baseline">
           <!-- admin name -->
-          <div [matMenuTriggerFor]="menu" class="mx-3 employee d-flex">
+          <div [matMenuTriggerFor]="menu" class="mx-2 employee d-flex">
             <mat-icon>person</mat-icon>{{ loggedUser.name }}
           </div>
           <!-- mat menu -->
