--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
     <div class="header-links d-flex">
       <div class="d-flex align-items-baseline">
         <!-- admin name -->
-        <div [matMenuTriggerFor]="menu" class="mx-3 admin d-flex">
+        <div [matMenuTriggerFor]="menu" class="mx-3 admin d-flex text-capitalize">
           <mat-icon>person</mat-icon>{{ loggedUser.name }}
         </div>
         <!-- mat menu -->
